<resources>
    <string name="app_name">WellnessWizardApp</string>
    <string name="welcome_n_please_insert_info">Insert rest of your data</string>
    <string name="sendButton">Create user</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="enter_your_height">Enter your height</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="gender_optional">Gender(optional)</string>

    <string name="caloriesEatenMaleTxt">Calories Eaten\n /2500 Kcal</string>
    <string name="caloriesEatenFemaleTxt">Calories Eaten\n /2000 Kcal</string>

    <string name="caloriesBurnMaleTxt">Burned Calories\n /6500 Kcal</string>
    <string name="caloriesBurnFemaleTxt">Burned Calories\n /5500 Kcal</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="dailySteps">Daily Steps</string>
    <string name="kcal"> Kcal</string>
</resources>